--- a/assessments.html
+++ b/assessments.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
 <head>
 <meta charset="UTF-8">
@@ -116,13 +116,12 @@ const { data: levels } = await supabase
   .from("achievement_levels")
   .select("id, label")
   .order("order_index", { ascending: true });
-
-// Load competencies
+// Load competencies and populate top core competencies
 const { data: competencies } = await supabase.from("competencies").select("id, name, subject_id").or("is_active.is.null,is_active.eq.true").order("name");
 const coreContainer = document.getElementById("coreCompetenciesContainer");
 
 competencies
-  .filter(c => !c.subject_id)
+  .filter(c => !c.subject_id)   // Only global core competencies
   .forEach(c => {
     const label = document.createElement("label");
     label.className = "competency-checkbox";
@@ -151,103 +150,222 @@ else tbody.innerHTML = students.map(s => `
   </td>
 </tr>`).join("");
 
-// Load strands & learning experiences
+// Load strands and sub-strands from DB
 const strandSelect = document.getElementById("strandSelect");
-const sleSelect = document.getElementById("sleSelect");
-const { data: strands } = await supabase.from("strands").select("id, name").eq("subject_id", subjectId).eq("grade", 10).order("name");
+const substrandSelect = document.getElementById("substrandSelect");
+
+// Load strands for the selected subject
+const { data: strands } = await supabase.from("strands")
+  .select("id, name")
+  .eq("subject_id", subjectId)
+  .eq("grade", 10)
+  .order("name");
+
 strands.forEach(s => strandSelect.innerHTML += `<option value="${s.id}">${s.name}</option>`);
+
 
 strandSelect.onchange = async () => {
   const strandId = strandSelect.value;
-  const { data: sles } = await supabase.from("learning_experiences").select("id, name").eq("strand_id", strandId).order("name");
+  const { data: sles } = await supabase.from("learning_experiences")
+    .select("id, name")
+    .eq("strand_id", strandId)
+    .order("name");
+
   sleSelect.innerHTML = `<option value="" disabled selected>-- Select Learning Experience --</option>`;
   sles.forEach(sle => sleSelect.innerHTML += `<option value="${sle.id}">${sle.name}</option>`);
 };
 
-// Save assessment with 3/7-day rule
+// Save assessment
+// Save assessment
 document.getElementById("saveAssessment").onclick = async () => {
   const strand = strandSelect.value;
   const sleId = sleSelect.value || null;
+
   const termId = document.getElementById("termSelect").value;
   const termName = document.getElementById("termSelect").selectedOptions[0]?.text;
   const assessmentTypeId = document.getElementById("assessmentTypeSelect").value;
-  const selectedCoreCompetencies = Array.from(document.querySelectorAll(".coreCompetency:checked")).map(cb => cb.value);
+
+  const selectedCoreCompetencies = Array.from(
+    document.querySelectorAll(".coreCompetency:checked")
+  ).map(cb => cb.value);
+
   const subjectCompetency = document.getElementById("subjectCompetency").value;
 
-  if (!termId || !assessmentTypeId || !strand) { alert("Please select Term, Assessment Type, and Strand."); return; }
-  if (!selectedCoreCompetencies.length) { alert("Select at least one core competency."); return; }
+  if (!termId || !assessmentTypeId || !strand) {
+    alert("Please select Term, Assessment Type, and Strand before saving.");
+    return;
+  }
+
+  if (!selectedCoreCompetencies.length) {
+    alert("Please select at least one core competency before saving.");
+    return;
+  }
 
   const studentRows = document.querySelectorAll("#studentsBody tr");
   let missingLevel = false;
+
   for (let row of studentRows) {
     const levelSelect = row.querySelector(".performanceLevel");
     if (!levelSelect) continue;
+
     const level = levelSelect.value;
     row.style.backgroundColor = "";
-    if (!level) { missingLevel = true; row.style.backgroundColor = "rgba(255,0,0,0.2)"; }
+
+    if (!level) {
+      missingLevel = true;
+      row.style.backgroundColor = "rgba(255,0,0,0.2)";
+    }
+
     levelSelect.onchange = () => row.style.backgroundColor = "";
   }
-  if (missingLevel) { alert("Some students are missing Performance Levels."); return; }
+
+  if (missingLevel) {
+    alert("Some students are missing a Performance Level.");
+    return;
+  }
 
   const { data: { user } } = await supabase.auth.getUser();
-  if (!user) { window.location.href="index.html"; return; }
+  if (!user) {
+    window.location.href = "index.html";
+    return;
+  }
 
-  const { data: profile } = await supabase.from("profiles").select("school_id").eq("auth_id", user.id).single();
-  const schoolId = profile?.school_id;
+  const { data: profile } = await supabase
+    .from("profiles")
+    .select("school_id")
+    .eq("auth_id", user.id)
+    .single();
+
+  if (!profile?.school_id) {
+    alert("Cannot determine school_id");
+    return;
+  }
+
+  const schoolId = profile.school_id;
   const today = new Date().toISOString();
   const assessmentTitle = `${subjectData.name} - ${termName} (${academicYear})`;
 
-  // Check existing assessment
-  const { data: existingAssessment } = await supabase.from("assessments")
+  // 🔎 CHECK if similar assessment exists
+  const { data: existingAssessment } = await supabase
+    .from("assessments")
     .select("*")
     .eq("class_id", classId)
     .eq("subject_id", subjectId)
     .eq("term_id", termId)
     .eq("assessment_type_id", assessmentTypeId)
-    .single();
+    .eq("academic_year", academicYear)
+    .order("created_at", { ascending: false })
+    .limit(1)
+    .maybeSingle();
 
-  let isUpdate = false;
+  let assessmentId;
+
   if (existingAssessment) {
-    const createdAt = new Date(existingAssessment.created_at);
-    const diffDays = Math.floor((new Date() - createdAt)/(1000*60*60*24));
-    if (diffDays <= 3) isUpdate = true;
-    else if (diffDays > 7) isUpdate = false;
-    else { isUpdate = confirm(`Assessment created ${diffDays} days ago. Update it?`); if (!isUpdate) return; }
+    const createdDate = new Date(existingAssessment.created_at);
+    const now = new Date();
+    const diffDays = (now - createdDate) / (1000 * 60 * 60 * 24);
+
+    if (diffDays <= 3) {
+      // ✅ Edit existing (levels only)
+      assessmentId = existingAssessment.id;
+
+    } else if (diffDays > 7) {
+      // ✅ Create new assessment
+      const { data: newAssessment, error } = await supabase
+        .from("assessments")
+        .insert([{
+          title: assessmentTitle,
+          class_id: classId,
+          subject_id: subjectId,
+          school_id: schoolId,
+          term_id: termId,
+          academic_year: academicYear,
+          assessment_type_id: assessmentTypeId,
+          assessment_date: today,
+          created_by: user.id,
+          core_competencies: selectedCoreCompetencies,
+          subject_competencies: subjectCompetency
+        }])
+        .select()
+        .single();
+
+      if (error) {
+        document.getElementById("status").innerText = error.message;
+        return;
+      }
+
+      assessmentId = newAssessment.id;
+
+    } else {
+      alert("Editing window closed (after 3 days). New assessment allowed after 7 days.");
+      return;
+    }
+
+  } else {
+    // 🆕 First time → create assessment
+    const { data: newAssessment, error } = await supabase
+      .from("assessments")
+      .insert([{
+        title: assessmentTitle,
+        class_id: classId,
+        subject_id: subjectId,
+        school_id: schoolId,
+        term_id: termId,
+        academic_year: academicYear,
+        assessment_type_id: assessmentTypeId,
+        assessment_date: today,
+        created_by: user.id,
+        core_competencies: selectedCoreCompetencies,
+        subject_competencies: subjectCompetency
+      }])
+      .select()
+      .single();
+
+    if (error) {
+      document.getElementById("status").innerText = error.message;
+      return;
+    }
+
+    assessmentId = newAssessment.id;
   }
 
-  // Upsert or insert assessment
-  const { data: assessment, error: assessmentError } = await supabase.from("assessments").upsert([{
-    class_id, subject_id, term_id, assessment_type_id, school_id, title: assessmentTitle,
-    academic_year, core_competencies: selectedCoreCompetencies, subject_competencies: subjectCompetency,
-    strand_id: strand, learning_experience_id: sleId, updated_at: today, updated_by: user.id, created_by: user.id
-  }], { onConflict: isUpdate ? ["class_id","subject_id","term_id","assessment_type_id"] : undefined }).select().single();
-
-  if (assessmentError) { document.getElementById("status").innerText = `Error: ${assessmentError.message}`; return; }
-
-  // Upsert student results
+  // ✅ Save / Update results (levels only)
   const rows = Array.from(studentRows).map(tr => ({
-    assessment_id: assessment.id,
+    assessment_id: assessmentId,
     student_id: tr.dataset.id,
     subject_id: subjectId,
     term_id: termId,
     assessment_type_id: assessmentTypeId,
     achievement_level_id: tr.querySelector(".performanceLevel").value,
-    academic_year, teacher_id: user.id, created_by: user.id, updated_at: today, updated_by: user.id
+    academic_year: academicYear,
+    teacher_id: user.id,
+    created_by: user.id
   }));
 
-  const { error: resultError } = await supabase.from("assessment_results").upsert(rows, { onConflict: ["assessment_id","student_id"], ignoreDuplicates: false });
-  if (resultError) { document.getElementById("status").innerText = `Error saving results: ${resultError.message}`; return; }
+  const { error: resultError } = await supabase
+    .from("assessment_results")
+    .upsert(rows, {
+      onConflict: ['assessment_id','student_id'],
+      ignoreDuplicates: false
+    });
 
-  // Upsert strand & learning experience
-  if (strand) {
-    const { error: sleError } = await supabase.from("assessment_strands").upsert([{
-      assessment_id: assessment.id, strand_id: strand, learning_experience_id: sleId
-    }], { onConflict: ["assessment_id"] });
-    if (sleError) { document.getElementById("status").innerText = `Error saving strand: ${sleError.message}`; return; }
+  if (resultError) {
+    document.getElementById("status").innerText = resultError.message;
+    return;
   }
 
-  document.getElementById("status").innerText = "Assessment and results saved successfully!";
+  // Save strand + learning experience ONLY when new assessment created
+  if (!existingAssessment || (existingAssessment && assessmentId !== existingAssessment.id)) {
+    await supabase.from("assessment_strands").insert([{
+      assessment_id: assessmentId,
+      strand_id: strand,
+      learning_experience_id: sleId
+    }]);
+  }
+
+  document.getElementById("status").innerText =
+    "Assessment saved successfully!";
 };
 </script>
 </body>
-</html>
+</html> 
