--- a/assessments.html
+++ b/assessments.html
@@ -91,7 +91,7 @@ document.getElementById("yearLabel").innerText = SYSTEM_YEAR;
 const classId = localStorage.getItem("class_id");
 const subjectId = localStorage.getItem("subject_id");
 const academicYear = localStorage.getItem("academic_year") || SYSTEM_YEAR;
-const learning_area_id = subjectId;
+
 if (!classId || !subjectId) {
   alert("Please select a class and subject first.");
   window.location.href="teacher-dashboard.html";
@@ -277,6 +277,7 @@ document.getElementById("saveAssessment").onclick = async () => {
           title: assessmentTitle,
           class_id: classId,
           subject_id: subjectId,
+           learning_area_id: subjectId,  // ✅ ADD THIS
           school_id: schoolId,
           term_id: termId,
           academic_year: academicYear,
@@ -309,6 +310,7 @@ document.getElementById("saveAssessment").onclick = async () => {
         title: assessmentTitle,
         class_id: classId,
         subject_id: subjectId,
+         learning_area_id: subjectId,  // ✅ ADD THIS
         school_id: schoolId,
         term_id: termId,
         academic_year: academicYear,
@@ -334,6 +336,7 @@ document.getElementById("saveAssessment").onclick = async () => {
     assessment_id: assessmentId,
     student_id: tr.dataset.id,
     subject_id: subjectId,
+     
     term_id: termId,
     assessment_type_id: assessmentTypeId,
     achievement_level_id: tr.querySelector(".performanceLevel").value,
