--- a/assessments.html
+++ b/assessments.html
@@ -111,6 +111,10 @@ document.getElementById("termSelect").innerHTML = `<option value="" disabled sel
 const { data: assessmentTypes } = await supabase.from("assessment_types").select("id, name");
 document.getElementById("assessmentTypeSelect").innerHTML = `<option value="" disabled selected>-- Select Assessment Type --</option>${assessmentTypes.map(a => `<option value="${a.id}">${a.name}</option>`).join("")}`;
 
+// Auto-check on page load after terms/types are loaded
+loadExistingAssessment();
+
+  
 // Load achievement levels
 const { data: levels } = await supabase
   .from("achievement_levels")
