--- a/assessments.html
+++ b/assessments.html
@@ -384,9 +384,10 @@ async function loadExistingAssessment() {
 
   if (!termId || !assessmentTypeId) {
     statusEl.innerText = "";
-    return;
+    return null;
   }
 
+  // 1️⃣ Get existing assessment
   const { data: existingAssessment } = await supabase
     .from("assessments")
     .select("*")
@@ -402,82 +403,93 @@ async function loadExistingAssessment() {
   if (!existingAssessment) {
     statusEl.innerText = "No previous assessment found. You can create a new one.";
     document.querySelectorAll(".performanceLevel").forEach(sel => sel.disabled = false);
-    document.querySelectorAll(".coreCompetency").forEach(cb => cb.disabled = false);
-    document.getElementById("subjectCompetency").disabled = false;
-    strandSelect.disabled = false;
-    sleSelect.disabled = false;
+    document.getElementById("subjectCompetency").value = "";
+    strandSelect.value = "";
+    sleSelect.innerHTML = `<option value="" disabled selected>-- Select Learning Experience --</option>`;
+    document.querySelectorAll(".coreCompetency").forEach(cb => cb.checked = false);
     return null;
   }
 
-  // ✅ Fill student results
+  // 2️⃣ Calculate difference in days
+  const createdDate = new Date(existingAssessment.created_at);
+  const now = new Date();
+  const diffDays = (now - createdDate) / (1000 * 60 * 60 * 24);
+
+  // 3️⃣ Load core competencies
+  const selectedCoreIds = existingAssessment.core_competencies || [];
+  document.querySelectorAll(".coreCompetency").forEach(cb => {
+    cb.checked = selectedCoreIds.includes(cb.value);
+  });
+
+  // 4️⃣ Load subject competencies
+  document.getElementById("subjectCompetency").value = existingAssessment.subject_competencies || "";
+
+  // 5️⃣ Load strand and SLE
+  const { data: strandData } = await supabase
+    .from("assessment_strands")
+    .select("*")
+    .eq("assessment_id", existingAssessment.id)
+    .maybeSingle();
+
+  if (strandData) {
+    // Set strand
+    if (strandData.strand_id) strandSelect.value = strandData.strand_id;
+
+    // Load SLEs for that strand
+    if (strandData.strand_id) {
+      const { data: sles } = await supabase
+        .from("learning_experiences")
+        .select("id, name")
+        .eq("strand_id", strandData.strand_id)
+        .order("name");
+
+      sleSelect.innerHTML = `<option value="" disabled selected>-- Select Learning Experience --</option>`;
+      sles.forEach(sle => sleSelect.innerHTML += `<option value="${sle.id}">${sle.name}</option>`);
+
+      // Set selected SLE
+      if (strandData.learning_experience_id) {
+        sleSelect.value = strandData.learning_experience_id;
+      }
+    }
+  }
+
+  // 6️⃣ Load student results
   const { data: results } = await supabase
     .from("assessment_results")
     .select("*")
     .eq("assessment_id", existingAssessment.id);
 
-  document.querySelectorAll("#studentsBody tr").forEach(tr => {
+  const studentRows = document.querySelectorAll("#studentsBody tr");
+  studentRows.forEach(tr => {
     const studentResult = results.find(r => r.student_id === tr.dataset.id);
     if (studentResult) {
-      tr.querySelector(".performanceLevel").value = studentResult.achievement_level_id;
+      const sel = tr.querySelector(".performanceLevel");
+      sel.value = studentResult.achievement_level_id;
     }
   });
 
-  // ✅ Fill core competencies
-  const selectedCore = existingAssessment.core_competencies || [];
-  document.querySelectorAll(".coreCompetency").forEach(cb => {
-    cb.checked = selectedCore.includes(cb.value);
-  });
-
-  // ✅ Fill subject competencies
-  document.getElementById("subjectCompetency").value = existingAssessment.subject_competencies || "";
-
-  // ✅ Fill strand + learning experience
-  const { data: strandsData } = await supabase
-    .from("assessment_strands")
-    .select("*")
-    .eq("assessment_id", existingAssessment.id)
-    .single()
-    .catch(() => ({ strand_id: null, learning_experience_id: null }));
-
-  if (strandsData) {
-    if (strandsData.strand_id) strandSelect.value = strandsData.strand_id;
-    if (strandsData.learning_experience_id) {
-      // Load SLEs for that strand first
-      const { data: sles } = await supabase
-        .from("learning_experiences")
-        .select("id, name")
-        .eq("strand_id", strandsData.strand_id);
-
-      sleSelect.innerHTML = `<option value="" disabled selected>-- Select Learning Experience --</option>`;
-      sles.forEach(sle => sleSelect.innerHTML += `<option value="${sle.id}">${sle.name}</option>`);
-
-      if (strandsData.learning_experience_id) sleSelect.value = strandsData.learning_experience_id;
-    }
-  }
-
-  // ✅ Handle editing window
-  const createdDate = new Date(existingAssessment.created_at);
-  const now = new Date();
-  const diffDays = (now - createdDate) / (1000 * 60 * 60 * 24);
-
+  // 7️⃣ Set editability based on 3-day window
   if (diffDays <= 3) {
     statusEl.innerText = `Existing assessment found. You can update all fields (within ${Math.ceil(3 - diffDays)} days).`;
-    document.querySelectorAll(".performanceLevel, .coreCompetency").forEach(el => el.disabled = false);
+    document.querySelectorAll(".performanceLevel").forEach(sel => sel.disabled = false);
     document.getElementById("subjectCompetency").disabled = false;
     strandSelect.disabled = false;
     sleSelect.disabled = false;
+    document.querySelectorAll(".coreCompetency").forEach(cb => cb.disabled = false);
   } else if (diffDays <= 7) {
     statusEl.innerText = `Editing window closed (after 3 days). Next assessment allowed after ${Math.ceil(7 - diffDays)} days.`;
-    document.querySelectorAll(".performanceLevel, .coreCompetency").forEach(el => el.disabled = true);
+    document.querySelectorAll(".performanceLevel").forEach(sel => sel.disabled = true);
     document.getElementById("subjectCompetency").disabled = true;
     strandSelect.disabled = true;
     sleSelect.disabled = true;
+    document.querySelectorAll(".coreCompetency").forEach(cb => cb.disabled = true);
   } else {
     statusEl.innerText = "You can create a new assessment now.";
-    document.querySelectorAll(".performanceLevel, .coreCompetency").forEach(el => el.disabled = false);
+    document.querySelectorAll(".performanceLevel").forEach(sel => sel.disabled = false);
     document.getElementById("subjectCompetency").disabled = false;
     strandSelect.disabled = false;
     sleSelect.disabled = false;
+    document.querySelectorAll(".coreCompetency").forEach(cb => cb.disabled = false);
   }
 
   return existingAssessment;
