--- a/assessments.html
+++ b/assessments.html
@@ -193,7 +193,8 @@ document.getElementById("saveAssessment").onclick = async () => {
     document.querySelectorAll(".coreCompetency:checked")
   ).map(cb => cb.value);
 
-  const subjectCompetency = document.getElementById("subjectCompetency").value;
+  // ✅ Save as plain text (comma-separated)
+  const subjectCompetency = document.getElementById("subjectCompetency").value.trim();
 
   if (!termId || !assessmentTypeId || !strand) {
     alert("Please select Term, Assessment Type, and Strand before saving.");
@@ -249,7 +250,7 @@ document.getElementById("saveAssessment").onclick = async () => {
   const today = new Date().toISOString();
   const assessmentTitle = `${subjectData.name} - ${termName} (${academicYear})`;
 
-  // 🔎 CHECK if similar assessment exists
+  // 🔎 Check if similar assessment exists
   const { data: existingAssessment } = await supabase
     .from("assessments")
     .select("*")
@@ -273,6 +274,14 @@ document.getElementById("saveAssessment").onclick = async () => {
       // ✅ Edit existing (levels only)
       assessmentId = existingAssessment.id;
 
+      // ✅ Also update subject competencies if editing
+      await supabase.from("assessments")
+        .update({
+          core_competencies: selectedCoreCompetencies,
+          subject_competencies: subjectCompetency
+        })
+        .eq("id", assessmentId);
+
     } else if (diffDays > 7) {
       // ✅ Create new assessment
       const { data: newAssessment, error } = await supabase
@@ -281,7 +290,7 @@ document.getElementById("saveAssessment").onclick = async () => {
           title: assessmentTitle,
           class_id: classId,
           subject_id: subjectId,
-           learning_area_id: subjectId,  // ✅ ADD THIS
+          learning_area_id: subjectId,
           school_id: schoolId,
           term_id: termId,
           academic_year: academicYear,
@@ -289,7 +298,7 @@ document.getElementById("saveAssessment").onclick = async () => {
           assessment_date: today,
           created_by: user.id,
           core_competencies: selectedCoreCompetencies,
-          subject_competencies: subjectCompetency.split(",").map(s => s.trim()).filter(Boolean)
+          subject_competencies: subjectCompetency
         }])
         .select()
         .single();
@@ -314,7 +323,7 @@ document.getElementById("saveAssessment").onclick = async () => {
         title: assessmentTitle,
         class_id: classId,
         subject_id: subjectId,
-         learning_area_id: subjectId,  // ✅ ADD THIS
+        learning_area_id: subjectId,
         school_id: schoolId,
         term_id: termId,
         academic_year: academicYear,
@@ -322,7 +331,7 @@ document.getElementById("saveAssessment").onclick = async () => {
         assessment_date: today,
         created_by: user.id,
         core_competencies: selectedCoreCompetencies,
-       subject_competencies: subjectCompetency.split(",").map(s => s.trim()).filter(Boolean)
+        subject_competencies: subjectCompetency
       }])
       .select()
       .single();
@@ -340,7 +349,6 @@ document.getElementById("saveAssessment").onclick = async () => {
     assessment_id: assessmentId,
     student_id: tr.dataset.id,
     subject_id: subjectId,
-     
     term_id: termId,
     assessment_type_id: assessmentTypeId,
     achievement_level_id: tr.querySelector(".performanceLevel").value,
